--- a/index.css
+++ b/index.css
@@ -1,9 +1,7 @@
 .carousel-caption {
     background-color: #282828;
     opacity: 0.90;
-    width: 100%;
-    padding-left: 2%;
-    margin-right: 38%;
-    padding-bottom: 2%;
+    width: 70%;
     text-align: center;
+    transform: translateX(-8%)
 }
