--- a/index.css
+++ b/index.css
@@ -1,78 +1,135 @@
-.carousel-caption {
-    background-color: #282828;
-    opacity: 0.90;
-    width: 70%;
-    text-align: center;
-    transform: translateX(-7.3%)
+/* Source Edits */
+body {
+    margin: 0;
+    background-color: #beccd8;
 }
 
-.carousel {
-    width: 90%;
-    box-shadow: 0px 0px 16px
+div {
+    vertical-align: top;
 }
 
-.footer {
-	text-align: center;
-	padding-bottom: 10px;
-	color: #e2e2e2;
-	margin-top: 60px;
+p {
+    font-size: 18px;
 }
 
-.main {
-    width: 70%;
-    float: left;
-	border-width:12px;
-	padding: 0px;
-	padding-bottom: 0px;	
-	padding-top: 0px;
-}
-
-.menu {
-    width: 30%;
-    float: left;
-}
-
-.menuitem {
-    letter-spacing:7px;
-	font-size:16px;	
-	color: #fff;	
-	width: 300px;
-	line-height:320%;
-	margin-left: 0px;
-	text-align: left;
-}
-
-.ol {
-    list-style-position: outside;
-	padding: 0px 0px 0px 0px;	
-	margin-top: 0px;
-	text-align: left;
-    font-size: 24px;
-    color: #fff;
-	margin-left: 20px;
+/* Custom Classes */
+.topper {
+    padding: 0 10%;
+    background-color: #8b9aa8/* #5f6972 */;
+    word-spacing: -20px;
+    font-family: 'Poor Story', cursive;
 }
 
 .subtitle {
-    letter-spacing:2px;
-	font-size:16px;	
-	margin-bottom:0px;
-	font-style:italic;
-	color: #e2e2e2;
-	line-height: 150%;
+    letter-spacing: 8px;
+    word-spacing: normal;
+    font-size: 18px;
+    margin-top: -32px;
+    color: #505050;
 }
 
+.thumb {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+}
+
+.thumb:hover {
+    box-shadow: 0 0 2px 1px #008cba80;
+}
+
+.container {
+    padding: 6px;
+}
+
+/* Buttons */
+.btn {
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 10px;
+}
+
+.info {background-color: #2196F3;}
+.info:hover {background: #0b7dda;}
+
+/* Website Frame */
+ul.sidenav {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 20%;
+    background-color: #8b9aa8;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+
+    box-shadow: 0px 0px 16px;
+
+    font-family: 'Poor Story', cursive;
+    font-size: 24px;
+    letter-spacing: 4px;
+}
+
+ul.sidenav li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+ 
+ul.sidenav li a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+ul.sidenav li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+div.content {
+    display: inline-block;
+    margin-left: 25%;
+    padding: 20px 16px;
+    height: 1000px;
+
+    font-family:'Poor Story', cursive;
+}
+
+/* Line Split */
 hr {
-    border:2px solid #ffffff;
-	height:1px;	
-	width: 30%;
+    border: 2px solid #ffffff;
+	height: 0;	
+	width: 80%;
 }
 
-a:link {
-    color: #ffffff;
+/* Tablet Size */
+@media screen and (max-width: 900px) {
+    ul.sidenav {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    ul.sidenav li a {
+        float: left;
+        padding: 15px;
+    }
+    .twitter-follow-button {
+        float: left;
+        padding: 15px;
+    }
+    div.content {margin-left: 0;}
 }
-a:visited {
-    color: #999999;    
+
+/* Phone Size */
+@media screen and (max-width: 400px) {
+    ul.sidenav li a {
+        text-align: center;
+        float: none;
+    }
 }
-a:hover {
-    color: #b0ffde;
-} 
