Slight color change

--- a/index.css
+++ b/index.css
@@ -83,7 +83,7 @@ ul.sidenav li a {
 }
  
 ul.sidenav li a.active {
-    background-color: #4CAF50;
+    background-color: #5f6972;
     color: white;
 }
 
