--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* Source Edits */
+/* Source Edits-------------------------------------------------------------------- */
 body {
     margin: 0;
     background-color: #beccd8;
@@ -9,10 +9,10 @@ div {
 }
 
 p {
-    font-size: 18px;
+    font-size: 20px;
 }
 
-/* Custom Classes */
+/* Custom Classes---------------------------------------------------------------- */
 .topper {
     padding: 0 10%;
     background-color: #8b9aa8/* #5f6972 */;
@@ -40,10 +40,21 @@ p {
 }
 
 .container {
-    padding: 6px;
+	padding: 6px;
+	text-align: center;
 }
 
-/* Buttons */
+.parallax {
+	height: 1000px;
+	background-color: red;
+	
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+/* Buttons----------------------------------------------------------------------------- */
 .btn {
     border: none;
     color: white;
@@ -56,9 +67,9 @@ p {
 .info {background-color: #2196F3;}
 .info:hover {background: #0b7dda;}
 
-/* Website Frame */
+/* Website Frame------------------------------------------------------------------ */
 ul.sidenav {
-    display: inline-block;
+    display: block;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -94,26 +105,31 @@ ul.sidenav li a:hover:not(.active) {
 
 div.content {
     display: inline-block;
-    margin-left: 25%;
-    padding: 20px 16px;
     height: 1000px;
-
+	margin-left: 20%;
+	width: 80%;
     font-family:'Poor Story', cursive;
+	/* overflow-y: auto; */
+	overflow-x: hidden;
 }
 
-/* Line Split */
+/* Line Split--------------------------------------------------------------------------- */
 hr {
     border: 2px solid #ffffff;
 	height: 0;	
 	width: 80%;
 }
+hr.main {
+	
+}
 
-/* Tablet Size */
+/* Tablet Size---------------------------------------------------------------------------- */
 @media screen and (max-width: 900px) {
     ul.sidenav {
         width: 100%;
         height: auto;
         position: relative;
+
     }
     ul.sidenav li a {
         float: left;
@@ -123,13 +139,30 @@ hr {
         float: left;
         padding: 15px;
     }
-    div.content {margin-left: 0;}
+    div.content {
+		margin-left: 0;
+		width: 100%;
+	}
 }
 
-/* Phone Size */
+/* Phone Size--------------------------------------------------------------------------------- */
 @media screen and (max-width: 400px) {
     ul.sidenav li a {
         text-align: center;
         float: none;
     }
+	ul.sidenav {
+		font-size: 14px;
+		letter-spacing: 4px;
+	}
+	.twitter-follow-button {
+        float: none;
+    }
+	.subtitle {
+		font-size: 14px;
+		margin-top: -24px;
+	}
+	.topper {
+    word-spacing: -14px;
+	}
 }
