--- a/index.css
+++ b/index.css
@@ -1,205 +1,207 @@
-/* Source Edits-------------------------------------------------------------------- */
+/* Source Mods */
 body {
-    margin: 0;
-    background-color: #beccd8;
+    background-color: #211e1e;
 }
 
-div {
-    vertical-align: top;
+a.title {
+    text-decoration: none;
+    color: #ededed;
 }
 
-p {
-    font-size: 20px;
-	font-family: "Arial";
+h1.title {
+    font-size: 80px;
 }
 
-/* Custom Classes---------------------------------------------------------------- */
+img.menuBut {
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+
+    display: block;
+}
+
+/* This is the banner ontop of the website */
 .topper {
-    padding: 0 10%;
-    background-color: #8b9aa8/* #5f6972 */;
-    word-spacing: -20px;
-    font-family: 'Poor Story', cursive;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    color: #ededed;
+    font-family: 'PT Sans Narrow', sans-serif;
 }
 
-.subtitle {
-    letter-spacing: 8px;
-    word-spacing: normal;
-    font-size: 18px;
-    margin-top: -32px;
-    color: #505050;
+.botter {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background-color: #252424;
+    margin-top: 14px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-family: 'PT Sans Narrow', sans-serif;
 }
 
-.thumb {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    width: 150px;
-}
+/* Slide in Overlay-----------------------------------*/
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+  }
 
-.thumb:hover {
-    box-shadow: 0 0 2px 1px #008cba80;
-}
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 92px;
+  }
 
 .container {
-	padding: 6px;
-	text-align: center;
+    text-align: center;
+    padding-bottom: 20px;
+    position: relative;
 }
 
-.parallax {
-	height: 500px;
-	width: 80;
-	
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	text-align: center;
-}
-.parcont { /* parallax container */
-	display: inline-block;
 
-	padding: 24px;
-	background: rgb(224, 224, 224, 0.9);
-	
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%); 
-	visibility: visible;
-}
-	
-/* Buttons----------------------------------------------------------------------------- */
-.btn {
-    border: none;
-    color: white;
-    padding: 14px 28px;
-    cursor: pointer;
-    font-size: 18px;
-    border-radius: 10px;
+/* Menu Item Containers--------------------------------------------------*/
+.contLeft {
+    float: left; 
+    margin-left: 15%;
+    box-shadow: 0px 10px 40px #141010;
+
+    position: relative;
 }
 
-.info {background-color: #2196F3;}
-.info:hover {background: #0b7dda;}
-
-/* Website Frame------------------------------------------------------------------ */
-ul.sidenav {
-    display: block;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 20%;
-    background-color: #8b9aa8;
-    position: fixed;
+.contLeft a:hover {
+    box-shadow: 0px 10px 80px #862323;
+}
+.contLeft:hover .overlay {
     height: 100%;
-	overflow: hidden;
-
-    box-shadow: 0px 0px 16px;
-
-    font-family: 'Poor Story', cursive;
-    font-size: 24px;
-    letter-spacing: 4px;
 }
 
-ul.sidenav li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
- 
-ul.sidenav li a.active {
-    background-color: #5f6972;
-    color: white;
+.contMid {
+    display: inline-block; 
+    margin:0 auto;
+    box-shadow: 0px 10px 40px #141010;
+
+    position: relative;
 }
 
-ul.sidenav li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+.contMid a:hover {
+    box-shadow: 0px 10px 80px #2f8623;
+}
+.contMid:hover .overlay {
+    height: 100%;
 }
 
-div.content {
-    display: inline-block;
-    height: 1000px;
-	margin-left: 20%;
-	width: 80%;
-    font-family:'Poor Story', cursive;
-	/* overflow-y: auto; */
+.contRight {
+    float: right; 
+    margin-right: 15%;
+    box-shadow: 0px 10px 40px #141010;
+
+    position: relative;
 }
 
-/* Line Split--------------------------------------------------------------------------- */
-hr {
-    border: 2px solid #ffffff;
-	height: 0;	
-	width: 80%;
+.contRight a:hover {
+    box-shadow: 0px 10px 80px #233b86;
+}
+.contRight:hover .overlay {
+    height: 100%;
 }
 
-/* Tablet Size---------------------------------------------------------------------------- */
-@media screen and (max-width: 800px) {
-	.parcont {
-		background: rgb(224, 224, 224, 1);
-		padding: 12px;
-		top: 50%;
-		left: 50%;
-	}
-}
-@media screen and (max-width: 768px) {
-	html {
-		overflow-x: hidden;
-	}
-	p {
-		font-size: 12px;
-	}
-    ul.sidenav {
-        width: 100%;
-        height: auto;
-        position: relative;
-
+/* Smaller Size---------------------------------------------------------------------------- */
+@media screen and (max-width: 1320px) {
+    img.menuBut {
+        width: 240px;
     }
-    ul.sidenav li a {
-        float: left;
-        padding: 15px;
+
+    .contLeft {
+        margin-left: 8%;
     }
-    .twitter-follow-button {
-        float: left;
-        padding: 15px;
+
+    .contRight {
+        margin-right: 8%;
     }
-    div.content {
-		margin-left: 0;
-		width: 100%;
-	}
-	.parallax {
-        background-attachment: scroll;
-		background-size: cover;
+
+    .text {
+        font-size: 74px;
     }
-	.parcont {
-		background: rgb(224, 224, 224, 1);
-		padding: 8px;
-		top: 50%;
-		left: 50%;
-	}
 }
 
-/* Phone Size--------------------------------------------------------------------------------- */
-@media screen and (max-width: 414px) {
-	html {
-		overflow-x: hidden;
-	}
-    ul.sidenav li a {
-        text-align: center;
-        float: none;
+@media screen and (max-width: 900px) {
+    img.menuBut {
+        width: 160px;
     }
-	ul.sidenav {
-		font-size: 14px;
-		letter-spacing: 4px;
-	}
-	.twitter-follow-button {
-        float: none;
+
+    .contLeft {
+        margin-left: 6%;
     }
-	.subtitle {
-		font-size: 14px;
-		margin-top: -24px;
-	}
-	.topper {
-		word-spacing: -14px;
-	}
+
+    .contRight {
+        margin-right: 6%;
+    }
+
+    .text {
+        font-size: 54px;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    img.menuBut {
+        width: 100px;
+    }
+
+    .container {
+        padding-bottom: 10px;
+    }
+
+    .contLeft {
+        box-shadow: 0px 0px 20px #141010;
+    }
+    
+    .contMid {
+        box-shadow: 0px 0px 20px #141010;
+    }
+    .contRight {
+        box-shadow: 0px 0px 20px #141010;
+    }
+
+    .text {
+        font-size: 34px;
+    }
+
+}
+@media screen and (max-width: 360px) {
+    img.menuBut {
+        width: 80px;
+    }
+
+    .container {
+        padding-bottom: 10px;
+    }
+
+    .contLeft {
+        box-shadow: 0px 0px 20px #141010;
+    }
+    
+    .contMid {
+        box-shadow: 0px 0px 20px #141010;
+    }
+    .contRight {
+        box-shadow: 0px 0px 20px #141010;
+    }
+
+    .text {
+        font-size: 24px;
+    }
 }
