Voice Page finally has content.

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* Source Mods */
+/* Source Mods ----------------------------------------------------------------------------------- */
 body {
     background-color: #211e1e;
 }
@@ -10,6 +10,11 @@ a.title {
 
 h1.title {
     font-size: 80px;
+}
+
+h3.sub {
+    font-size: 14px;
+    margin-top: -10px;
 }
 
 img.menuBut {
@@ -34,7 +39,7 @@ img.menuBut {
     width: 360px;
     height: auto;
 }
-
+/* Banner spread for bottom of site */
 .botter {
     height: 100%;
     width: 100%;
@@ -46,7 +51,7 @@ img.menuBut {
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
-/* Slide in Overlay-----------------------------------*/
+/* Slide in Overlay-------------------------------------------------------------------------------------*/
 .overlay {
     position: absolute;
     bottom: 0;
@@ -56,10 +61,9 @@ img.menuBut {
     width: 100%;
     height: 0;
     transition: .5s ease;
-  }
-
-  .text {
-    color: white;
+}
+.text {
+    color: #ededed;
     font-size: 20px;
     position: absolute;
     top: 50%;
@@ -70,8 +74,7 @@ img.menuBut {
     text-align: center;
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 92px;
-  }
-
+}
 .container {
     text-align: center;
     padding-bottom: 20px;
@@ -79,7 +82,8 @@ img.menuBut {
 }
 
 
-/* Menu Item Containers--------------------------------------------------*/
+/* Menu Item Containers-------------------------------------------------------------------------------------*/
+/* Left column bar (Artwork/Visual) */
 .contLeft {
     float: left; 
     margin-left: 15%;
@@ -94,6 +98,7 @@ img.menuBut {
     height: 100%;
 }
 
+/* Middle column bar (About) */
 .contMid {
     display: inline-block; 
     margin:0 auto;
@@ -108,6 +113,7 @@ img.menuBut {
     height: 100%;
 }
 
+/* Right column bar (Voice) */
 .contRight {
     float: right; 
     margin-right: 15%;
@@ -122,7 +128,38 @@ img.menuBut {
     height: 100%;
 }
 
-/* Smaller Size---------------------------------------------------------------------------- */
+/* Content Presentation -------------------------------------------------------------------------------------- */
+.pres {
+    display: inline-table;
+    background-color: #ededed;
+    font-family: 'PT Sans Narrow', sans-serif;
+    
+}
+.presImg {
+    float: left;
+    /* box-shadow: 5px 5px 40px #141010; */
+}
+.presCont {
+    color: #211e1e;
+    float: right;
+    max-width: 700px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.presButton {
+    border: none;
+    color: #ededed;
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+}
+.presButton:hover {
+    background-color: #ededed;
+    color: #211e1e;
+}
+
+/* Smaller Size----------------------------------------------------------------------------------------------- */
 @media screen and (max-width: 1320px) {
     img.menuBut {
         width: 240px;
