--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ body {
 
 /* Containers compose the framework for the website. The building blocks that everything else is put into. */
 .containerHead {
+    color: white;
     width: 80%;
     margin: 2rem;
     padding-left: 2rem;
@@ -64,10 +65,12 @@ body {
     border-radius: 2rem;
 }
 .containerIndex {
+    color: white;
     text-align: center;
     margin: 0rem;
 }
 .containerTab {
+    color: white;
     width: 80%;
     margin: 2rem;
     padding-left: 2rem;
@@ -84,6 +87,7 @@ body {
     border-radius: 2rem;
 }
 .containerSidebar {
+    color: white;
     width: 24%;
     position: fixed;
     right: 0;
