--- a/main.css
+++ b/main.css
@@ -10,6 +10,9 @@
 }
 
 /* Source Mods ---------------------------------------------------------------------- */
+a {
+    text-decoration: none;
+}
 a:link {
     color: white;
     text-decoration: none;
