--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ body {
     padding-left: 2rem;
     position: relative;
     top: 1rem;
-    z-index: 2;
+    z-index: 1;
 
     background-image: var(--main-gradient);
     border: 10px solid transparent;
@@ -99,7 +99,7 @@ body {
     width: 24%;
     position: fixed;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     padding-right: 2rem;
 }
 
@@ -217,5 +217,125 @@ h1.indexTitleText {
 @keyframes FadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+/* -------------------------------------------------------------------------------------------- */
+/* Media Resize ------------------------------------------------------------------------------- */
+
+@media screen and (max-width: 600px) {
+    h1.indexTitleText {
+        font-size: 6rem;
+        top: 2rem;
+    }
+    .indexFlashText {
+        top: 12rem;
+        font-size: 2rem;
+    }
+    
+    h1.tabH1 {
+        margin: 0rem;
+        font-size: 1rem;
+        width: 100%;
+        /* font-family: 'Press Start 2P', cursive; */
+    }
+    h1.title {
+        margin: 1rem;
+        font-size: 1rem;
+    }
+    h1.side {
+        margin: 0rem;
+        font-size: 1rem;
+    }
+    h2.tabH2 {
+        margin: 0rem;
+        font-size: 0.8rem;
+    }
+
+    .containerHead {
+        color: white;
+        width: 80%;
+        margin: 0rem;
+        padding-left: 0rem;
+        position: relative;
+        top: 1rem;
+        z-index: 1;
+    
+        background-image: var(--main-gradient);
+        border: 10px solid transparent;
+        border-image-source: var(--main-border-8);
+        border-image-slice:27 27 27 27;
+        border-image-width:20px 20px 20px 20px;
+        border-image-outset:0px 0px 0px 0px;
+        border-image-repeat:stretch stretch;
+        border-radius: 2rem;
+    }
+    .containerTab {
+        color: white;
+        width: 80%;
+        margin: 0rem;
+        padding-left: 0rem;
+        position: relative;
+        z-index: 0;
+        background-image: var(--main-gradient);
+        
+        border: 10px solid transparent;
+        border-image-source: var(--main-border-8);
+        border-image-slice:27 27 27 27;
+        border-image-width:20px 20px 20px 20px;
+        border-image-outset:0px 0px 0px 0px;
+        border-image-repeat:stretch stretch;
+        border-radius: 2rem;
+    }
+    .containerSidebar {
+        color: white;
+        width: 24%;
+        position: fixed;
+        right: 0;
+        z-index: 2;
+        padding-right: 1rem;
+    }
+    .tabChar {
+        border: 10px solid transparent;
+        border-image-source: var(--main-border-8);
+        border-image-slice:27 27 27 27;
+        border-image-width:20px 20px 20px 20px;
+        border-image-outset:0px 0px 0px 0px;
+        border-image-repeat:stretch stretch;
+        border-radius: 1rem;
+    
+        max-width: 96px;
+    }
+    .tabContent-Info {
+        margin-left: var(--tabSpace);
+        width: 45%;
+    }
+    .tabContent-Sample {
+        /* margin-left: var(--tabSpace); */
+        width: 25%;
+    
+    }
+    .tabContent-Blank {
+        width: 25%;
+    
+    }
+
+    .sidebar {
+        border: 10px solid transparent;
+        border-image-source: var(--main-border-8);
+        border-image-slice:27 27 27 27;
+        border-image-width:20px 20px 20px 20px;
+        border-image-outset:0px 0px 0px 0px;
+        border-image-repeat:stretch stretch;
+        border-radius: 1rem;
+    
+        background-image: var(--main-gradient);
+        
+        text-align: left;
+    }
+    
+    .soclogo {
+        margin: 1rem;
+    }
+
 }
 
